--- a/Movie-Magic/package.json
+++ b/Movie-Magic/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "movie-magic",
+  "name": "movie-magic-may-2025",
   "version": "1.0.0",
-  "description": "",
-  "type": "module",
+  "description": "SoftUni JS Back-End Course Workshop",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -10,20 +9,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/KNedov/Movie-Magic.git"
+    "url": "git+https://github.com/ivailopapazov/movie-magic-may-2025.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "bugs": {
-    "url": "https://github.com/KNedov/Movie-Magic/issues"
+    "url": "https://github.com/ivailopapazov/movie-magic-may-2025/issues"
   },
-  "homepage": "https://github.com/KNedov/Movie-Magic#readme",
+  "homepage": "https://github.com/ivailopapazov/movie-magic-may-2025#readme",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "uuid": "^11.1.0"
